# pocket-repo

./: Cargo.toml  PACKAGING.md  README.md
docs/: architecture.mmd
packaging/homebrew/: pocket-repo.rb
packaging/launchd/: com.ppdx999.pocket-repo.plist
src/: config.rs  highlight.rs  main.rs
src/framework/: context.rs  diff.rs  handler.rs  mod.rs  request.rs  response.rs
src/git/: mod.rs
src/pages/: blob.rs  diff.rs  mod.rs  recent.rs  refs.rs  repos.rs  search.rs  tree.rs
static/: app.css  app.js  runtime.js
