[package]
name = "pocket-repo"
version = "0.1.0"
edition = "2021"
description = "Mobile-first web app for browsing Git repositories from your phone"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
maud = { version = "0.26", features = ["axum"] }
scraper = "0.22"
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
